--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/libs.min.js"></script>
 <script src="js/main.min.js"></script>
 </body>
 </html>
