--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Project</title>
+    <link rel="stylesheet" href="css/index.min.css">
 </head>
 <body>
 
+<script src="js/index.js"></script>
 </body>
 </html>
